--- a/src/main/webapp/WEB-INF/views/signin.html
+++ b/src/main/webapp/WEB-INF/views/signin.html
@@ -51,7 +51,7 @@
                                 </div>
                                 <button type="submit" class="btn btn-raised btn-success">登&nbsp;录</button>
                                 <a href="${base}/forget_pwd" class="btn btn-raised btn-danger">找回密码</a>
-								<a href="${base}" class="btn btn-raised btn-info">返回首页</a>
+								<a href="${base}/" class="btn btn-raised btn-info">返回首页</a>
                             </fieldset>
                         </form>
                     </div>
