--- a/src/main/webapp/WEB-INF/views/header.html
+++ b/src/main/webapp/WEB-INF/views/header.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="biezhi">
     <title>${site_title ?! sysinfo.site_title} - By Blade</title>
+    <link rel="Shortcut Icon" href="${base}/static/img/favicon.gif" />
+    <link rel="Bootmark" href="${base}/static/img/favicon.gif" />
+    <meta name="keywords" content="${keywords ?! sysinfo.site_keywords}">
+    <meta name="description" content="${description ?! sysinfo.site_description}">
     <!-- Bootstrap Core CSS -->
     <link href="${base}/static/css/bootstrap.min.css" rel="stylesheet">
    	<link href="${base}/static/css/bootstrap-material-design.min.css" rel="stylesheet">
