--- a/src/main/webapp/WEB-INF/views/admin/films.html
+++ b/src/main/webapp/WEB-INF/views/admin/films.html
@@ -7,14 +7,14 @@
             <div class="panel-body">
               <div class="row">
               		<div class="col-md-8">
-              			<a href="${base}/admin/add_film" class="btn btn-raised btn-success">发布新影片</a>
+              			<a href="${base}/admin/add_film" class="btn btn-raised btn-info">发布新影片</a>
               		</div>
               		<div class="col-md-4">
 	              		<div class="pull-right">
 		        			<div class="form-group is-empty">
 					            <div class="input-group">
 					              <span class="input-group-addon"></span>
-					              <input type="text" id="addon1" class="form-control" width="200px"/>
+					              <input type="text" id="addon1" class="form-control" width="200px" placeholder="请输入电影标题关键字"/>
 					              <span class="input-group-btn">
 					                  <button class="btn btn-primary" type="button">搜索<div class="ripple-container"></div></button>
 					              </span>
